<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Grid"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Card0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <CheckBox
            android:id="@+id/P1C0"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/dummy_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/P1C1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Card2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/P1C2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Card3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/P1C3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Card4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/P1C4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|start|center_horizontal"
            android:text="@string/dummy_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Winner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/HandOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/playerone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Dealer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/deal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CardCounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/cardCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remainingcardcount" />

        <TextView
            android:id="@+id/cardsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
		<TextView
		    android:id="@+id/coin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/whichcoin" />

        <SeekBar
            android:id="@+id/seekCoin"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="3"
            android:progress="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/howmany" />

        <SeekBar
            android:id="@+id/seekBet"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="40"
            android:progress="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourbet" />

        <TextView
            android:id="@+id/bet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reward" />

        <TextView
            android:id="@+id/reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payout" />

        <TextView
            android:id="@+id/payout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yourbank" />

        <TextView
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_content" />
    </LinearLayout>

</LinearLayout>